--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 header {
-    background-color: rgb(40, 40, 40);
+    background-color: linear-gradient(90deg,rgb(248, 206, 213), white);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -18,7 +18,7 @@ header {
 }
 
 header a {
-    color: white;
+    color: black;
     text-decoration: none;
     font-size: 1.2rem;
     text-transform: uppercase;
@@ -27,11 +27,11 @@ header a {
 }
 
 header a:hover {
-    color: tomato;
+    color: pink;
 }
 
 header .logo a {
-    color: tomato;
+    color: black;
     font-size: 2.5rem;
     font-weight: bold;
 }
@@ -73,7 +73,7 @@ h3 {
 
 
 body {
-    background-image: linear-gradient(90deg,tomato, white);
+    background-image: linear-gradient(90deg,rgb(248, 206, 213), white);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
