--- a/assets/base.css
+++ b/assets/base.css
@@ -3,7 +3,7 @@
     --drap: #fefaf6;
     --black: #000000;
     --white: #ffffff;
-    --orange: #F5B32F;
+    --orange: #FF6600;
     --main-font: 'Josefin Sans', sans-serif;
 }
 
@@ -28,6 +28,21 @@ html {
 
 
 body {
-    background: var(--braun);
+    background: var(--drap);
     font-family: var(--main-font);
+}
+
+.section-cim {
+    color: var(--black);
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    text-align: center;
+    margin: 1rem 0 2rem;
+}
+
+@media screen and (min-width: 576px) {
+    .section-cim {
+        font-size: 2.5rem;
+    }
 }
