kontakt menu elkeszites

--- a/assets/base.css
+++ b/assets/base.css
@@ -4,6 +4,7 @@
     --black: #000000;
     --white: #ffffff;
     --orange: #FF6600;
+    --lightbeige:#fcf4e8;
     --main-font: 'Josefin Sans', sans-serif;
 }
 
