--- a/assets/rolam.css
+++ b/assets/rolam.css
@@ -42,6 +42,7 @@
 }
 
 .rolam-tartalom__gomb  {
+    background-color: var(--lightbeige);
     border-radius: 20px;
     border: 2px solid var(--black);
     padding: 1rem 2rem;
