--- a/assets/footer.css
+++ b/assets/footer.css
@@ -1,11 +1,15 @@
 footer {
-    display: flex;
+    /**  display: flex;
     justify-content: center;
+    margin-bottom: 15px;
+    flex-wrap: wrap;**/
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .footer-copyright {
-    display: flex;
-    justify-content: space-between;
+    /**  display: flex;
+    justify-content: space-between;**/
     width: 65%;
     
 }
