css files fertig gestellt

--- a/assets/fooldal.css
+++ b/assets/fooldal.css
@@ -12,6 +12,7 @@
 
 
 .fooldal-kontener {
+    padding: 5px;
     text-align: center;
     letter-spacing: 0.2rem;
     font-family: 'Domine', serif;
